Change in the routing of css, js files

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ظروف مسی | محصولات</title>
-  <link rel="icon" type="image/png" href="../src/assets/images/logo-copper.png">
-  <link rel="stylesheet" href="../public/css/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="../public/css/index.css" />
+  <link rel="icon" type="image/png" href="src/assets/images/logo-copper.png">
+  <link rel="stylesheet" href="public/css/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="public/css/index.css" />
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <!--!---------------------------------- navbar mobile ----------------------------------!-->
     <div class="header-mobile d-none d-lg-flex align-center justify-between position-relative">
       <div class="logo">
-        <img class="img-logo w-100" src="../src/assets/images/logo-copper.png" alt="" />
+        <img class="img-logo w-100" src="src/assets/images/logo-copper.png" alt="" />
       </div>
       <div class="menu-bar-icon">
         <button class="manu-bar-btn">
@@ -75,10 +75,10 @@
       <!--!---------------------------------- logo ----------------------------------!-->
       <div class="banner-right position-relative w-30 w-lg-100">
         <div class="banner-image-circle">
-          <img src="../src/assets/images/circle-pattern3.png" alt="circle-pattern" class="position-absolute" />
+          <img src="src/assets/images/circle-pattern3.png" alt="circle-pattern" class="position-absolute" />
         </div>
         <div class="logo d-lg-none">
-          <img class="img-logo w-100" src="../src/assets/images/logo-copper.png" alt="" />
+          <img class="img-logo w-100" src="src/assets/images/logo-copper.png" alt="" />
         </div>
         <div class="banner-text">
           <h2 class="banner-title">
@@ -95,7 +95,7 @@
       </div>
       <div class="banner-left position-relative w-70 w-lg-100 d-sm-none">
         <div class="banner-image-circle">
-          <img class="position-absolute" src="../src/assets/images/circle-pattern-left.png" alt="circle-pattern" />
+          <img class="position-absolute" src="src/assets/images/circle-pattern-left.png" alt="circle-pattern" />
         </div>
         <div class="phone-number position-absolute">
           <span>شماره تماس: </span>
@@ -167,7 +167,7 @@
           </div>
         </nav>
         <div class="banner-copper-image">
-          <img class="w-100" src="../src/assets/images/copper1.png" alt="copper" />
+          <img class="w-100" src="src/assets/images/copper1.png" alt="copper" />
         </div>
       </div>
     </div>
@@ -205,15 +205,14 @@
           </div>
           <div class="product-popular-list position-relative">
             <div class="bg-circle-product-popluar">
-              <img src="../src/assets/images/circle-pattern3.png" alt="circle-pattern"
+              <img src="src/assets/images/circle-pattern3.png" alt="circle-pattern"
                 class="img-circle img-circle-top position-absolute" />
-              <img src="../src/assets/images/circle-pattern3.png" alt="circle-pattern"
+              <img src="src/assets/images/circle-pattern3.png" alt="circle-pattern"
                 class="img-circle img-circle-bottom position-absolute" />
             </div>
             <div class="swiper swiper-popular">
               <div class="swiper-wrapper popular-product-wrap d-flex align-center">
                 
-     
               </div>
             </div>
           </div>
@@ -223,7 +222,7 @@
           <div>
             <h2 class="gallery-title index-title text-end">گالری نقش نگار</h2>
             <div class="gallery-image-second position-absolute">
-              <img src="../src/assets/images/gllary-image1.png" alt="gallery" class="" />
+              <img src="src/assets/images/gllary-image1.png" alt="gallery" class="" />
             </div>
             <div class="gallery-text-box position-absolute">
               <p>
@@ -237,7 +236,7 @@
               </p>
             </div>
           </div>
-          <img src="../src/assets/images/gllary-image1.png" alt="gallery" class="gallery-image-frist" />
+          <img src="src/assets/images/gllary-image1.png" alt="gallery" class="gallery-image-frist" />
         </div>
         <!--!---------------------------------- handicrafts----------------------------------!-->
         <div class="handicrafts w-100 h-100 position-relative">
@@ -249,12 +248,12 @@
               <div class="box d-flex flex-col align-center justify-center gap-16">
                 <h2 class="box-title">ارسال رایگان</h2>
                 <span class="box-text">ارسال رایگان به سرار نقاط کشور</span>
-                <img src="../src/assets/images/car.svg" alt="" />
+                <img src="src/assets/images/car.svg" alt="" />
               </div>
               <div class="box d-flex flex-col align-center justify-center gap-16">
                 <h2 class="box-title">فروش اقساطی</h2>
                 <span class="box-text">امکان خرید و پرداخت به صورت اقساطی برای شما عزیزان</span>
-                <img src="../src/assets/images/dollar.svg" alt="" />
+                <img src="src/assets/images/dollar.svg" alt="" />
               </div>
             </div>
             <div class="handicrafts-bg-image d-flex align-center">
@@ -264,29 +263,29 @@
               <div class="box d-flex flex-col align-center justify-center gap-16">
                 <h2 class="box-title">طراحی منحصر به فرد</h2>
                 <span class="box-text">طراحی کاملا منحصربفرد و خاص برای شما عزیزان</span>
-                <img src="../src/assets/images/design.svg" alt="design" />
+                <img src="src/assets/images/design.svg" alt="design" />
               </div>
               <div class="box d-flex flex-col align-center justify-center gap-16">
                 <h2 class="box-title">خرید مطمئن</h2>
                 <span class="box-text">درساخت محصولات از با کیفیت ترین محصولات استفاده شده
                   است.</span>
-                <img src="../src/assets/images/buyP.svg" alt="buyP" />
+                <img src="src/assets/images/buyP.svg" alt="buyP" />
               </div>
             </div>
           </div>
         </div>
         <!--!---------------------------------- article----------------------------------!-->
         <div class="article position-relative">
-          <img src="../src/assets/images/tArticle.svg" alt="tArticle"
+          <img src="src/assets/images/tArticle.svg" alt="tArticle"
             class="article-image image-top position-absolute w-50" />
-          <img src="../src/assets/images/bArticle.svg" alt="tArticle"
+          <img src="src/assets/images/bArticle.svg" alt="tArticle"
             class="article-image image-bottom position-absolute w-50" />
           <!--!---------------------------------- article slide ----------------------------------!-->
           <div class="swiper swiper-article">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div class="article-content d-flex flex-col align-center justify-between gap-16">
-                  <img src="../src/assets/images/article1.png" alt="article" class="article-img w-100" />
+                  <img src="src/assets/images/article1.png" alt="article" class="article-img w-100" />
                   <h2 class="article-title text-center">
                     صفر تا صد هنر مس و پرداز
                   </h2>
@@ -307,7 +306,7 @@
               </div>
               <div class="swiper-slide">
                 <div class="article-content d-flex flex-col align-center justify-between gap-16">
-                  <img src="../src/assets/images/article2.png" alt="article" class="article-img w-100" />
+                  <img src="src/assets/images/article2.png" alt="article" class="article-img w-100" />
                   <h2 class="article-title text-center">
                     صفر تا صد هنر مس و پرداز
                   </h2>
@@ -330,7 +329,7 @@
         <!--!---------------------------------- description store----------------------------------!-->
         <div class="description-store d-flex align-center gap-32 flex-lg-col gap-lg-8">
           <div class="description-store-image w-50 w-lg-100">
-            <img src="../src/assets/images/store-1.png" alt="store" class="w-100">
+            <img src="src/assets/images/store-1.png" alt="store" class="w-100">
           </div>
           <div class="description-store-article w-50 w-lg-100">
             <h2 class="index-title description-store-title text-lg-center">فروشگاه صنایع دستی نقش نگار</h2>
@@ -353,7 +352,7 @@
   <footer class="footer">
     <div class="container d-flex justify-between gap-16 flex-md-col align-md-center">
       <div class="footer-logo d-flex flex-col align-center w-md-100 ">
-        <img src="../src/assets/images/logo-copper.png" alt="logo" class="footer-logo-img" />
+        <img src="src/assets/images/logo-copper.png" alt="logo" class="footer-logo-img" />
         <span class="footer-text text-md-center">
           فروشگاه صنایع دستی نقش نگار، با تمرکز ویژه بر ظروف نقره و فیروزکوبی
           و سیاه‌ قلم و مس و پرداز، محصولاتی منتخب و شگفت‌آور از هنرمندان ماهر
@@ -427,16 +426,16 @@
         </div>
       </div>
       <div class="footer-license d-flex align-end gap-32">
-        <img src="../src/assets/images/etehadieh.png" alt="etehadieh" />
-        <img src="../src/assets/images/samandehi.png" alt="samandehi" />
-        <img src="../src/assets/images/enamad.png" alt="enamad" />
+        <img src="src/assets/images/etehadieh.png" alt="etehadieh" />
+        <img src="src/assets/images/samandehi.png" alt="samandehi" />
+        <img src="src/assets/images/enamad.png" alt="enamad" />
       </div>
     </div>
   </footer>
-  <script src="../src/js/axios.min.js"></script>
-  <script src="../src/js/swiper-bundle.min.js"></script>
-  <script src="../src/js/app.js" type="module"></script>
-  <script src="../src/js/index.js" type="module"></script>
+  <script src="src/js/axios.min.js"></script>
+  <script src="src/js/swiper-bundle.min.js"></script>
+  <script src="src/js/app.js" type="module"></script>
+  <script src="src/js/index.js" ></script>
 </body>
 
 </html>
