--- a/aboutus.html
+++ b/aboutus.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>تماس با ما</title>
-    <link rel="icon" type="image/png" href="../src/assets/images/logo-copper.png">
-    <link rel="stylesheet" href="css/custom.css">
-    <link rel="stylesheet" href="css/aboutus.css">
+    <link rel="icon" type="image/png" href="src/assets/images/logo-copper.png">
+    <link rel="stylesheet" href="public/css/custom.css">
+    <link rel="stylesheet" href="public/css/aboutus.css">
 </head>
 
 <body>
@@ -118,9 +118,9 @@
     <main class="main w-100 h-100 ">
         <div class="about w-40 w-sm-90">
             <div class="about-header d-flex align-center justify-center gap-16">
-                <img src="../src/assets/images/logo-copper.png" class="about-header-img" alt="naghsh-negar">
+                <img src="src/assets/images/logo-copper.png" class="about-header-img" alt="naghsh-negar">
                 <h2 class="about-header-title text-center">درباره ما</h2>
-                <img src="../src/assets/images/logo-copper.png" class="about-header-img" alt="naghsh-negar">
+                <img src="src/assets/images/logo-copper.png" class="about-header-img" alt="naghsh-negar">
             </div>
             <div class="about-main d-flex flex-col align-center justify-center gap-16">
                 <p class="about-text text-justify">نقش نگار، مبدأ زیبایی و هنر! ما یک تیم از عاشقان هنر و صنایع دستی
@@ -140,7 +140,7 @@
     <footer class="footer">
         <div class="container d-flex justify-between gap-16 flex-md-col align-md-center">
             <div class="footer-logo d-flex flex-col align-center w-md-100">
-                <img src="../src/assets/images/logo-copper.png" alt="logo" class="footer-logo-img" />
+                <img src="src/assets/images/logo-copper.png" alt="logo" class="footer-logo-img" />
                 <span class="footer-text text-md-center">
                     فروشگاه صنایع دستی نقش نگار، با تمرکز ویژه بر ظروف نقره و فیروزکوبی
                     و سیاه‌ قلم و مس و پرداز، محصولاتی منتخب و شگفت‌آور از هنرمندان ماهر
@@ -214,14 +214,14 @@
                 </div>
             </div>
             <div class="footer-license d-flex align-end gap-32">
-                <img src="../src/assets/images/etehadieh.png" alt="etehadieh" />
-                <img src="../src/assets/images/samandehi.png" alt="" />
-                <img src="../src/assets/images/enamad.png" alt="" />
+                <img src="src/assets/images/etehadieh.png" alt="etehadieh" />
+                <img src="src/assets/images/samandehi.png" alt="" />
+                <img src="src/assets/images/enamad.png" alt="" />
             </div>
         </div>
     </footer>
-    <script src="../src/js/axios.min.js"></script>
-    <script src="../src/js/app.js" type="module"></script>
+    <script src="src/js/axios.min.js"></script>
+    <script src="src/js/app.js" type="module"></script>
 </body>
 
 </html>
