--- a/category.html
+++ b/category.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="icon" type="image/png" href="../src/assets/images/logo-copper.png">
-    <link rel="stylesheet" href="../public/css/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="css/custom.css">
-    <link rel="stylesheet" href="css/category.css">
+    <link rel="icon" type="image/png" href="src/assets/images/logo-copper.png">
+    <link rel="stylesheet" href="public/css/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="public/css/custom.css">
+    <link rel="stylesheet" href="public/css/category.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
         <div class="container d-flex align-center w-100 justify-sm-between">
             <!--!---------------------------------- logo ----------------------------------!-->
             <div class="logo w-sm-25">
-                <img class="img-logo w-100" src="../src/assets/images/logo-copper.png" alt="" />
+                <img class="img-logo w-100" src="src/assets/images/logo-copper.png" alt="" />
             </div>
             <!--!---------------------------------- navbar mobile ----------------------------------!-->
             <div class="menu-bar-icon d-none d-sm-block">
@@ -161,7 +161,7 @@
     <footer class="footer">
         <div class="container d-flex justify-between gap-16 flex-md-col align-md-center">
             <div class="footer-logo d-flex flex-col align-center w-md-100 ">
-                <img src="../src/assets/images/logo-copper.png" alt="logo" class="footer-logo-img" />
+                <img src="src/assets/images/logo-copper.png" alt="logo" class="footer-logo-img" />
                 <span class="footer-text text-md-center">
                     فروشگاه صنایع دستی نقش نگار، با تمرکز ویژه بر ظروف نقره و فیروزکوبی
                     و سیاه‌ قلم و مس و پرداز، محصولاتی منتخب و شگفت‌آور از هنرمندان ماهر
@@ -241,10 +241,10 @@
             </div>
         </div>
     </footer>
-    <script src="../src/js/swiper-bundle.min.js"></script>
-    <script src="../src/js/axios.min.js"></script>
-    <script src="../src/js/app.js" type="module"></script>
-    <script src="../src/js/category.js"></script>
+    <script src="src/js/swiper-bundle.min.js"></script>
+    <script src="src/js/axios.min.js"></script>
+    <script src="src/js/app.js" type="module"></script>
+    <script src="src/js/category.js"></script>
 </body>
 
 </html>
