--- a/contactus.html
+++ b/contactus.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>تماس با ما</title>
-    <link rel="icon" type="image/png" href="../src/assets/images/logo-copper.png">
-    <link rel="stylesheet" href="css/custom.css">
-    <link rel="stylesheet" href="css/contactus.css">
+    <link rel="icon" type="image/png" href="src/assets/images/logo-copper.png">
+    <link rel="stylesheet" href="public/css/custom.css">
+    <link rel="stylesheet" href="public/css/contactus.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <div class="container d-flex align-center w-100 justify-sm-between">
             <!--!---------------------------------- logo ----------------------------------!-->
             <div class="logo w-sm-25">
-                <img class="img-logo w-100" src="../src/assets/images/logo-copper.png" alt="" />
+                <img class="img-logo w-100" src="src/assets/images/logo-copper.png" alt="" />
             </div>
             <!--!---------------------------------- navbar mobile ----------------------------------!-->
             <div class="menu-bar-icon d-none d-sm-block">
@@ -118,9 +118,9 @@
     <main class="main w-100 h-100 ">
         <div class="contact w-40 w-sm-90">
             <div class="contact-header d-flex align-center justify-center gap-16">
-                <img src="../src/assets/images/logo-copper.png" class="contact-header-img d-xs-none" alt="naghsh-negar">
+                <img src="src/assets/images/logo-copper.png" class="contact-header-img d-xs-none" alt="naghsh-negar">
                 <h2 class="contact-header-title text-center">راه های ارتباطی با نقش نگار</h2>
-                <img src="../src/assets/images/logo-copper.png" class="contact-header-img d-xs-none" alt="naghsh-negar">
+                <img src="src/assets/images/logo-copper.png" class="contact-header-img d-xs-none" alt="naghsh-negar">
             </div>
             <div class="contact-main d-flex flex-col align-center justify-center gap-16">
                 <div class="phone-number-whatsapp d-flex align-center flex-md-col gap-16">
@@ -194,7 +194,7 @@
     <footer class="footer">
         <div class="container d-flex justify-between gap-16 flex-md-col align-md-center">
             <div class="footer-logo d-flex flex-col align-center w-md-100">
-                <img src="../src/assets/images/logo-copper.png" alt="logo" class="footer-logo-img" />
+                <img src="src/assets/images/logo-copper.png" alt="logo" class="footer-logo-img" />
                 <span class="footer-text text-md-center">
                     فروشگاه صنایع دستی نقش نگار، با تمرکز ویژه بر ظروف نقره و فیروزکوبی
                     و سیاه‌ قلم و مس و پرداز، محصولاتی منتخب و شگفت‌آور از هنرمندان ماهر
@@ -268,14 +268,14 @@
                 </div>
             </div>
             <div class="footer-license d-flex align-end gap-32">
-                <img src="../src/assets/images/etehadieh.png" alt="etehadieh" />
-                <img src="../src/assets/images/samandehi.png" alt="" />
-                <img src="../src/assets/images/enamad.png" alt="" />
+                <img src="src/assets/images/etehadieh.png" alt="etehadieh" />
+                <img src="src/assets/images/samandehi.png" alt="" />
+                <img src="src/assets/images/enamad.png" alt="" />
             </div>
         </div>
     </footer>
-    <script src="../src/js/axios.min.js"></script>
-    <script src="../src/js/app.js" type="module"></script>
+    <script src="src/js/axios.min.js"></script>
+    <script src="src/js/app.js" type="module"></script>
 </body>
 
 </html>
