--- a/login.html
+++ b/login.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ظروف مسی | ثبت نام</title>
-  <link rel="icon" type="image/png" href="../src/assets/images/logo-copper.png">
-  <link rel="stylesheet" href="css/auth.css" />
+  <link rel="icon" type="image/png" href="src/assets/images/logo-copper.png">
+  <link rel="stylesheet" href="public/css/auth.css" />
 </head>
 
 <body>
@@ -15,7 +15,7 @@
     <div class="container d-flex align-center w-100 justify-sm-between">
       <!--!---------------------------------- logo ----------------------------------!-->
       <div class="logo w-sm-25">
-        <img class="img-logo w-100" src="../src/assets/images/logo-copper.png" alt="" />
+        <img class="img-logo w-100" src="src/assets/images/logo-copper.png" alt="" />
       </div>
       <!--!---------------------------------- navbar mobile ----------------------------------!-->
       <div class="menu-bar-icon d-none d-sm-block">
@@ -116,7 +116,7 @@
     <div class="container d-flex flex-col align-center">
       <!--!---------------------------------- logo ----------------------------------!-->
       <div class="logo-container">
-        <img src="../src/assets/images/auth-logo.png" alt="نقش نگار" class="logo-img w-100 h-100" />
+        <img src="src/assets/images/auth-logo.png" alt="نقش نگار" class="logo-img w-100 h-100" />
       </div>
       <!--!---------------------------------- auth form ----------------------------------!-->
       <div class="auth-form-wrapper overflow-hidden w-50 w-sm-100 ">
@@ -159,7 +159,7 @@
   <footer class="footer">
     <div class="container d-flex justify-between gap-16 flex-md-col align-md-center">
       <div class="footer-logo d-flex flex-col align-center w-md-100 ">
-        <img src="../src/assets/images/logo-copper.png" alt="logo" class="footer-logo-img" />
+        <img src="src/assets/images/logo-copper.png" alt="logo" class="footer-logo-img" />
         <span class="footer-text text-md-center">
           فروشگاه صنایع دستی نقش نگار، با تمرکز ویژه بر ظروف نقره و فیروزکوبی
           و سیاه‌ قلم و مس و پرداز، محصولاتی منتخب و شگفت‌آور از هنرمندان ماهر
@@ -233,16 +233,16 @@
         </div>
       </div>
       <div class="footer-license d-flex align-end gap-32">
-        <img src="../src/assets/images/etehadieh.png" alt="etehadieh" />
-        <img src="../src/assets/images/samandehi.png" alt="" />
-        <img src="../src/assets/images/enamad.png" alt="" />
+        <img src="src/assets/images/etehadieh.png" alt="etehadieh" />
+        <img src="src/assets/images/samandehi.png" alt="" />
+        <img src="src/assets/images/enamad.png" alt="" />
       </div>
     </div>
   </footer>
-  <script src="../src/js/sweetalert.js"></script>
-  <script src="../src/js/axios.min.js"></script>
-  <script src="../src/js/auth.js" type="module"></script>
-  <script src="../src/js/login.js"></script>
+  <script src="src/js/sweetalert.js"></script>
+  <script src="src/js/axios.min.js"></script>
+  <script src="src/js/auth.js" type="module"></script>
+  <script src="src/js/login.js"></script>
 </body>
 
 </html>
