Change in the routing of css, js files

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
               </div>
             </div>
             <div class="handicrafts-bg-image d-flex align-center">
-              <img src="../src/assets/images/copper5.png" alt="copper" class="w-100" />
+              <img src="src/assets/images/copper5.png" alt="copper" class="w-100" />
             </div>
             <div class="boxs-container d-flex flex-col align-center justify-between flex-lg-row flex-xs-col">
               <div class="box d-flex flex-col align-center justify-center gap-16">
