Change code html

--- a/category.html
+++ b/category.html
@@ -235,9 +235,9 @@
                 </div>
             </div>
             <div class="footer-license d-flex align-end gap-32">
-                <img src="../src/assets/images/etehadieh.png" alt="etehadieh" />
-                <img src="../src/assets/images/samandehi.png" alt="" />
-                <img src="../src/assets/images/enamad.png" alt="" />
+                <img src="src/assets/images/etehadieh.png" alt="etehadieh" />
+                <img src="src/assets/images/samandehi.png" alt="" />
+                <img src="src/assets/images/enamad.png" alt="" />
             </div>
         </div>
     </footer>
