deploey on the mongo db

--- a/register.html
+++ b/register.html
@@ -269,6 +269,7 @@
   </footer>
   <script src="src/js/sweetalert.js"></script>
   <script src="src/js/axios.min.js"></script>
+  <script src="src/js/app.js" type="module"></script>
   <script src="src/js/auth.js" type="module"></script>
   <script src="src/js/register.js"></script>
 </body>
