fix bug dashboard and cart aside

--- a/category.html
+++ b/category.html
@@ -36,7 +36,7 @@
                             </svg>
                         </span>
                     </div>
-                    <div class="dashboard-main-content">
+                    <div class="cart-main-content">
 
                     </div>
                     <div class="total-price">
