--- a/product.html
+++ b/product.html
@@ -35,7 +35,7 @@
                 </path>
               </svg></span>
           </div>
-          <div class="dashboard-main-content">
+          <div class="cart-main-content">
 
           </div>
           <div class="total-price">
