--- a/aboutus.html
+++ b/aboutus.html
@@ -35,7 +35,7 @@
                             </svg>
                         </span>
                     </div>
-                    <div class="dashboard-main-content">
+                    <div class="cart-main-content">
 
                     </div>
                     <div class="total-price">
