--- a/contactus.html
+++ b/contactus.html
@@ -34,7 +34,7 @@
                                 </path>
                             </svg></span>
                     </div>
-                    <div class="dashboard-main-content">
+                    <div class="cart-main-content">
 
                     </div>
                     <div class="total-price">
