add script tags in aboutus.html and contactus.html

--- a/aboutus.html
+++ b/aboutus.html
@@ -195,21 +195,7 @@
                 <div class="our-products d-flex flex-col">
                     <h2 class="footer-title our-products-title">محصولات ما</h2>
                     <ul class="footer-list-link list-our-products d-flex flex-col align-center">
-                        <li>
-                            <a href="#">نقره کوب</a>
-                        </li>
-                        <li>
-                            <a href="#">سیاه قلم</a>
-                        </li>
-                        <li>
-                            <a href="#">شبه نقره</a>
-                        </li>
-                        <li>
-                            <a href="#">مس پرداز</a>
-                        </li>
-                        <li>
-                            <a href="#">ملیله کاری</a>
-                        </li>
+                      
                     </ul>
                 </div>
                 <div class="contact-us d-flex flex-col">
@@ -250,6 +236,7 @@
         </div>
     </footer>
     <script src="src/js/axios.min.js"></script>
+    <script src="src/js/app.js" type="module"></script>
     <script src="src/js/dashboard.js"></script>
 </body>
 
