fix bug in product js

--- a/login.html
+++ b/login.html
@@ -271,6 +271,7 @@
   <script src="src/js/sweetalert.js"></script>
   <script src="src/js/axios.min.js"></script>
   <script src="src/js/dashboard.js"></script>
+  <script src="src/js/app.js" type="module"></script>
   <script src="src/js/auth.js" type="module"></script>
   <script src="src/js/login.js"></script>
 </body>
