--- a/index.html
+++ b/index.html
@@ -220,10 +220,10 @@
                   d="M14.8336 27.4327H14.0503C11.6003 27.4327 11.2336 25.716 11.2336 24.6993V17.0661C11.2336 16.0494 11.6003 14.3327 14.0503 14.3327H14.8336C17.2836 14.3327 17.6503 16.0494 17.6503 17.0661V24.6993C17.6503 25.716 17.2836 27.4327 14.8336 27.4327ZM13.767 24.916C13.8337 24.9327 13.9337 24.9327 14.067 24.9327H14.8503C14.9837 24.9327 15.0837 24.9327 15.1503 24.916C15.1503 24.866 15.167 24.7993 15.167 24.6993V17.0661C15.167 16.9661 15.167 16.8994 15.1503 16.8494C15.0837 16.8327 14.9837 16.8327 14.8503 16.8327H14.067C13.9337 16.8327 13.8337 16.8327 13.767 16.8494C13.767 16.8994 13.7503 16.9661 13.7503 17.0661V24.6993C13.7503 24.7993 13.7503 24.866 13.767 24.916Z"
                   fill="#28887A" />
               </svg>
-              محبور ترین محصولات
+              محبوب ترین محصولات
             </div>
             <span class="popular-line w-100"></span>
-            <a href="#" class="popular-view-more-btn d-flex align-center gap-8 d-sm-none">
+            <a href="" class="popular-view-more-btn d-flex align-center gap-8 d-sm-none">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                 class="bi bi-arrow-right" viewBox="0 0 16 16">
                 <path fill-rule="evenodd"
@@ -481,6 +481,7 @@
     </div>
   </footer>
   <script src="src/js/axios.min.js"></script>
+  <script src="src/js/sweetalert.js"></script>
   <script src="src/js/swiper-bundle.min.js"></script>
   <script src="src/js/dashboard.js"></script>
   <script src="src/js/app.js" type="module"></script>
