--- a/aboutus.html
+++ b/aboutus.html
@@ -236,6 +236,7 @@
         </div>
     </footer>
     <script src="src/js/axios.min.js"></script>
+    <script src="src/js/sweetalert.js"></script>
     <script src="src/js/app.js" type="module"></script>
     <script src="src/js/dashboard.js"></script>
 </body>
