--- a/category.html
+++ b/category.html
@@ -271,6 +271,7 @@
     </footer>
     <script src="src/js/swiper-bundle.min.js"></script>
     <script src="src/js/axios.min.js"></script>
+    <script src="src/js/sweetalert.js"></script>
     <script src="src/js/dashboard.js"></script>
     <script src="src/js/app.js" type="module"></script>
     <script src="src/js/category.js"></script>
