--- a/contactus.html
+++ b/contactus.html
@@ -289,6 +289,7 @@
     </footer>
     <script src="src/js/axios.min.js"></script>
     <script src="src/js/dashboard.js"></script>
+    <script src="src/js/sweetalert.js"></script>
     <script src="src/js/app.js" type="module"></script>
 </body>
 
