--- a/products.html
+++ b/products.html
@@ -248,6 +248,7 @@
   </footer>
   <script src="src/js/swiper-bundle.min.js"></script>
   <script src="src/js/axios.min.js"></script>
+  <script src="src/js/sweetalert.js"></script>
   <script src="src/js/dashboard.js"></script>
   <script src="src/js/app.js" type="module"></script>
   <script src="src/js/products.js" type="module"></script>
